--- a/docs/team/chen-xi-cx.adoc
+++ b/docs/team/chen-xi-cx.adoc
@@ -64,3 +64,5 @@ include::../UserGuide.adoc[tag=average]
 |===
 
 include::../DeveloperGuide.adoc[tag=average]
+
+include::../DeveloperGuide.adoc[tag=averageTest]
