--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -88,7 +88,7 @@ list with similar instructions to this page!
 [reftext="Figure 3.1.1"]
 [caption="Figure 3.1.1: "]
 .The help window that appears when the user asks for the default form of `help`
-image::UG-HelpWindow.png[width="600"]
+image::UG-HelpWindow.png[width="500"]
 
 
 
@@ -100,7 +100,7 @@ application GUI or just press kbd:[F1] on your keyboard as shown below!
 [reftext="Figure 3.1.2"]
 [caption="Figure 3.1.2: "]
 .The location of the help button on FinSec's GUI
-image::UG-HelpLocation.png[width="400"]
+image::UG-HelpLocation.PNG[width="300"]
 
 
 Example commands: +
@@ -776,7 +776,7 @@ projected income, claim and budget values for the current month.
 [reftext="Figure 3.21.2"]
 [caption="Figure 3.21.2: "]
 .FinSec displaying your projected budget over the course of the current month in a graph
-image::UG-BudgetExample2.PNG[width="800"]
+image::UG-BudgetExample2.PNG[width="600"]
 
 Friendly tip 2 :bulb: +
 Clicking on one of the data-points will cause a tooltip similar to the one shown in the picture above to pop up.
