--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -69,7 +69,7 @@ e.g. typing *`help`* and pressing kbd:[Enter] will open the help window.
 === Viewing help : `help`
 
 Format: `help`
-// tag::login[]
+
 === Register : `register`
 
 Register an account with the application to start using it. +
@@ -91,7 +91,7 @@ Format: `login user/USERNAME pass/PASSWORD`
 Examples:
 
 * `login user/Steve pass/Pa55w0rd!`
-// end::login[]
+
 === Change tab : `tab`
 
 Change tab to any of the available ones. +
@@ -244,7 +244,6 @@ Example:
 
 === Earnings
 
-//tag::[starEarningsTag]
 ==== Add Earnings: `add_earnings`
 
 Adds Earnings to the list of earnings. +
@@ -283,7 +282,7 @@ Format: `delete_earnings INDEX`
 Examples:
 
 * `delete_earnings 2`
-
+//tag::[startEarningsTag]
 ==== Find Earnings: `find_earnings`
 
 Find Earnings in the list of earnings. +
@@ -349,8 +348,8 @@ Example:
 of 09/02/2019, the earnings will not be added.
 * Suggested to invoked everyday.
 ****
-
 // end::[startEarningsTag]
+
 === Notes
 ==== Add Note: `addnote`
 
