using Serve Mode exceptions

--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -384,7 +384,10 @@ Enters save mode to serve a borrower with the ID `K0001`
 '''
 === Using Serve Mode
 
-The Serve Mode is for librarians to serve borrowers. All commands in Serve Mode are done on a specific borrower currently served by the librarian. All commands in Normal Mode can be used in Serve Mode too.
+The Serve Mode is for librarians to serve borrowers. All commands in Serve Mode are done on a specific borrower currently served by the librarian.
+All commands in Normal Mode, except for `serve` and `exit`, can be used in Serve Mode too.
+The command `unregister` cannot be used on the currently serving borrower.
+
 
 // tag::loanSlip[]
 ==== Exiting Serve Mode: `done`
